--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,12 +3,12 @@
   "name": "D&R Reptilez Sports",
   "icons": [
     {
-      "src": "/rcc3.png",
+      "src": "/android-chrome-192x192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "/rcc3.png",
+      "src": "/android-chrome-512x512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
